--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 discord==2.2.3
 discord.py==2.2.3
+dnspython==2.3.0
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
+pymongo==4.3.3
 requests==2.31.0
 soupsieve==2.4.1
 urllib3==2.0.2
